# IntelliOptics-Dashboard

./: .env  .gitignore  README.md  pytest.ini  test.py
apps/: __init__.py
apps/api/: .env.example  README.md  __init__.py  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: __init__.py  base.py  session.py  types.py
apps/api/app/models/: __init__.py  alert.py  annotation.py  detector.py  enums.py  escalation.py  image_query.py  mixins.py  stream.py  user.py
apps/api/app/routes/: __init__.py  alerts.py  detectors.py  health.py  image_queries.py  streams.py
apps/api/app/schemas/: __init__.py  alert.py  detector.py  image_query.py  stream.py
apps/api/backend/: create_detector_test.py  main.py  requirements.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 202405280001_create_core_tables.py
apps/api/tests/: __init__.py  conftest.py  factories.py  test_alerts.py  test_config.py  test_detectors.py  test_health.py  test_image_queries.py  test_models_metadata.py  test_streams.py
apps/edge/: .env.example  README.md
apps/web/: .env.example
apps/web/frontend/: package-lock.json
apps/web/frontend/pages/: index.js
backend/: test.py
docs/: architecture.md
frontend/: .env.local  package-lock.json  package.json
frontend/components/ui/: Dialog.js  Input.js  button.js  card.js  input.js
frontend/pages/: index.js
libs/sdk-py/: README.md  pyproject.toml
libs/sdk-py/intellioptics/: __init__.py  _img.py  client.py  messaging.py  models.py
libs/sdk-py/tests/: test_client.py  test_messaging.py
(+1 files in other folders)
