[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellioptics"
version = "0.1.0"
description = "Trimmed IntelliOptics Python SDK for interacting with the API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "IntelliOptics" }]
dependencies = [
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["intellioptics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
